--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -3501,7 +3501,7 @@ Two times at WWDC!</string>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="aJ3-hh-xeB" kind="unwind" unwindAction="unwindToMainViewController:" id="f5a-JQ-QW6"/>
+                                                    <action selector="closeClicked:" destination="bj9-Te-WTq" eventType="touchUpInside" id="RCY-rG-dZs"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -3598,7 +3598,6 @@ Two times at WWDC!</string>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Wi-6E-iag" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="aJ3-hh-xeB" userLabel="Exit" sceneMemberID="exit"/>
                 <pinchGestureRecognizer id="pk3-Ru-jBd">
                     <connections>
                         <action selector="pinched:" destination="bj9-Te-WTq" id="AtS-PJ-yU9"/>
